Fix more betterly the textarea wrapping problem
eb96ad3b400 and eba837e1cd20 were attempts to fix the problem of the
event's rows with bit <textarea> blocks of text wrapping badly. The
first fixed that problem, but left a one-space offset, and left the
additional selectboxes in a row on the same line instead of stacked
vertically. The second one fixed the one-space problem

This fixes all the problems--just apply "flex" to the display rows with
a textarea.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,10 +195,13 @@ font-size: 10px;
     border: 1px solid black;
 }
 .display-row {
-    display: flex;
     border: 1px solid black;
     background: lightgrey;
     padding: 3px;
+}
+
+.display-row.has-textarea {
+    display: flex;
 }
 
 .display-row:hover {
@@ -224,9 +227,6 @@ font-size: 10px;
     display: inline-block;
     width: 10em;
     height: 100%;
-}
-.multi-select-wrapper {
-    display: inherit;
 }
 
 /* 
